# hypembed

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: pages.yml
benches/: inference_bench.rs
docs/: index.html  styles.css
examples/: basic_embed.rs
src/: lib.rs
src/error/: mod.rs
src/model/: attention.rs  config.rs  embedding.rs  encoder.rs  ff.rs  mod.rs  pool.rs  safetensors.rs  weights.rs
src/pipeline/: embedder.rs  mod.rs
src/tensor/: activation.rs  layernorm.rs  matmul.rs  mod.rs  normalize.rs  ops.rs  shape.rs  simd.rs  softmax.rs
src/tokenizer/: encode.rs  mod.rs  pre_tokenize.rs  vocab.rs  wordpiece.rs
